<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authorization.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        android:layout_gravity="center">


        <ImageView
            android:id="@+id/iv_register_illustration"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/iv_login"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="320dp"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/inter_extra_bold"
            android:text="@string/tv_title_register"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_register_illustration" />

        <TextView
            android:id="@+id/tv_name_form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/inter_extra_bold"
            android:text="@string/tv_register_account_name_title"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_login_title"
            app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="@+id/tv_name_form_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_form_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_register_account_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_sandi_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/inter_extra_bold"
            android:text="@string/tv_register_account_mobile_number_title"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_name_form_title"
            app:layout_constraintTop_toBottomOf="@id/edt_email_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            android:layout_marginTop="6dp"
            app:hintEnabled="false"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="@+id/tv_sandi_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_sandi_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_register_phone_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/tv_register_account_mobile_number_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_register_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_extra_bold"
            android:layout_marginTop="6dp"
            android:text="@string/tv_register_address_form_title"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_name_form_title"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_register_mobile_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@+id/tv_sandi_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_mobile_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_register_address_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_register_home_address_form_title"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/inter_extra_bold"
            android:text="@string/tv_register_account_sandi_title"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_name_form_title"
            app:layout_constraintTop_toBottomOf="@+id/edt_register_mobile_number" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_register_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@+id/tv_sandi_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_register_password_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/tv_register_account_sandi_hint"
                android:drawableEnd="@drawable/ic_eye_close"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_register_confirmation_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_extra_bold"
            android:layout_marginTop="6dp"
            android:text="@string/tv_register_account_confirmation_sandi_title"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_name_form_title"
            app:layout_constraintTop_toBottomOf="@+id/edt_register_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_register_confirmation_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@+id/tv_sandi_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_confirmation_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_register_password_confirmation_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_eye_close"
                android:hint="@string/tv_register_account_confirmation_sandi__hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="14dp"
            android:backgroundTint="@color/blue_primary"
            android:fontFamily="@font/inter_extra_bold"
            android:text="@string/btn_daftar"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/edt_register_confirmation_password" />

        <TextView
            android:id="@+id/btn_sudah_memiliki_akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_extra_bold"
            android:text="@string/btn_have_account"
            android:layout_marginTop="15dp"
            android:textColor="@color/blue_primary"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="6dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
