<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transaction.TransactionFragment">

    <!-- AppBar Layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_appbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/blue_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_mutation_title"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_extra_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="25dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Body Layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/cl_appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Card View for Balance Information -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_mutation_balance"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="15dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_mutation_balance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="37dp"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/tv_mutation_balance" />

            <TextView
                android:id="@+id/tv_mutation_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_zero_balance"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/black"
                android:textSize="37sp" />

            <TextView
                android:id="@+id/btn_start_mutation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_action_mutation"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/blue_primary"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"/>
        </androidx.cardview.widget.CardView>

        <!-- Transaction History Title -->
        <TextView
            android:id="@+id/tv_mutation_history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_transaction_history"
            android:fontFamily="@font/inter_extra_bold"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/cv_mutation_balance"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- RecyclerView for Transaction History (Scrollable) -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_mutation_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_mutation_history_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="15dp"
            tools:listitem="@layout/card_mutation_history"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
