<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transaction.BankActivity">

    <!-- AppBar Layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_appbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/blue_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/baseline_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/change_profile_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/change_profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penarikan_transfer_bank"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/inter_extra_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="55dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ScrollView for the content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cl_appbar"
        app:layout_constraintBottom_toTopOf="@id/cl_confirm_button_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Spinner for Bank Selection -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <Spinner
                        android:id="@+id/spinner_bank"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:background="@color/grey_light"
                        android:entries="@array/jenis_bank"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="12dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_account_number"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:background="@color/grey_light"
                        android:hint="@string/masukkan_no_rekening"
                        android:inputType="number"
                        android:fontFamily="@font/inter_medium"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="18dp"
                        android:textColor="@color/black"
                        android:layout_marginTop="12dp"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/spinner_bank" />

                    <!-- Rp TextView -->
                    <TextView
                        android:id="@+id/tv_rp"
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:fontFamily="@font/inter_bold"
                        android:text="Rp"
                        android:background="@color/grey_secondary"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="@+id/et_nominal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/et_nominal" />

                    <!-- EditText for Nominal Input -->
                    <EditText
                        android:id="@+id/et_nominal"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:background="@color/grey_light"
                        android:hint="@string/masukkan_nominal"
                        android:fontFamily="@font/inter_medium"
                        android:layout_marginTop="12dp"
                        android:inputType="number"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="18dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_rp"
                        app:layout_constraintTop_toBottomOf="@id/et_account_number" />

                    <TextView
                        android:id="@+id/tv_nominal_reminder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/minimal_penarikan_50_000"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@+id/et_nominal"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <!-- Confirmation Button -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_confirm_button_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="14dp"
            android:backgroundTint="@color/blue_primary"
            android:text="@string/konfirmasi"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
